set framework to single run